--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Candice Parker
-title: 
+title: Guiding Light
 header-img: img/home-bg.png
 email: lexus2424@gmail.com
 copyright_name: Candice Parker
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Introduction
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  lexus2727
